Tue Jan 20 06:25:01 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cleanup.cpp:
          Copy the name when it gets passed. It could be that the
          string is a static string in a dll and then we can't print
          it when things are crashing because the dll is then already
          unloaded

Mon Jan 19 20:53:01 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/SSL/SSL_Asynch_Stream_Test.cpp: More basic fixes.

Mon Jan 19 19:34:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:

          Scheduled the test for bug#3548

Mon Jan 19 16:36:33 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * bin/tao_orb_tests.lst:

          Scheduled the test for bug#3524.

Mon Jan 19 14:55:19 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3500_Regression_Test.cpp:
        * tests/Bug_3541_Regression_Test.cpp:
          Solved fuzz errors

Mon Jan 19 12:51:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * THANKS
          Added Bill Rizzi <rizi at softserv.com> for his contribution to the following automated tests:
            Bug_3500_Regression_Test
            Bug_3541_Regression_Test

Mon Jan 19 12:28:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3500_Regression_Test.cpp:
          Added in order to run automated tests for Bugzilla #3500

        * tests/Bug_3541_Regression_Test.cpp:
          Added in order to run automated tests for Bugzilla #3541

        * tests/tests.mpc:
          Added Bug_3500_Regression_Test and Bug_3541_Regression_Test

        * tests/run_test.lst:
          Added Bug_3500_Regression_Test and Bug_3541_Regression_Test

Mon Jan 19 09:14:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Log_Msg_Attributes.inl:
          Initialize all members with default values

        * ace/Log_Msg.cpp:
          Just delete the casted ACE_Log_Msg pointer, no need todo
          another cast
