@@ -1,3 +1,9 @@
+Tue Jan 20 11:04:11 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_3500_Regression_Test.cpp:
+        * tests/Bug_3541_Regression_Test.cpp:
+          Eliminated some warning on Linux build
+
 Tue Jan 20 06:25:01 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Cleanup.cpp:
